# pinyin_annotator

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: gh-pages-deploy.yaml
locales/: en.json  fr.json
src/: api.rs  constants.rs  lib.rs  main.rs  utils.rs
src/components/: analyzed_text.rs  language_controller.rs  mod.rs  ruby_pinyin.rs  theme_controller.rs
src/pages/: home.rs
style/: tailwind.css
