[package]
name = "pinyin_annotator"
version = "0.1.0"
edition = "2021"

[features]
csr = ["leptos_i18n_build/csr"]

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", features = ["nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
leptos_i18n = { version = "0.6", features = ["csr", "cookie", "plurals"] }
leptos-use = { version = "0.16", features = ["use_interval", "use_interval_fn"] }
gloo-net = { version = "0.6.0", features = ["json", "http"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
send_wrapper = { version = "0.6.0", features = ["futures"] }
thiserror = "2"
urlencoding = "2.1.2"
unicode-segmentation = "1.7.1"
# dodo-zh = "0.1.5"
pinyin = "0.11"
rand = "0.9.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3", features = ["Document", "Window", "AbortController", "AbortSignal", "ReadableStream", "Response"] }
wasm-bindgen = "0.2"
jieba-rs = "0.8.1"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }

[build-dependencies]
leptos_i18n_build = "0.6"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
